--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
         <nav>
-            <img src="media/images/logo.jpg" alt="">
+            <h1>Portfolio</h1>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     
@@ -56,18 +56,41 @@
     </section>
     <footer>
         <section class="footer-content">
+            <form action="">
+                <label for="firtname">First name: <span class="red-star">*</span></label>
+                <input type="text" name="firtname" id="firtname" required> <br>
+                <label for="surname">Last name:<span class="red-star">*</span></label>
+                <input type="text" name="surname" id="surname" required> <br>
+                <label for="email">Email: <span class="red-star">*</span></label>
+                <input type="email" name="email" id="email" required> <br>
+                <label for="phone">Phone: <span class="red-star">*</span></label>
+                <input type="phone" name="phone" id="phone" required> <br>
+                <label for="terms">agree to terms and conditions: <span class="red-star">*</span></label>
+                <select name="terms" id="terms" required>
+                    <option value="Yes">Yes</option>
+                    <option value="No">No</option>
+                </select> <br>
+                <button onclick="myFuction()">Submit</button>
+
+
+            </form>
         <div>
            <p>&copy2025 Responsive Site</p>
         </div>
         <div>
             <ul>
-                <li><a href="">Contant us</a></li>
-                <li><a href="">Private Policy</a></li>
+                <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" id="contact">Contant us</a></li>
+                <li><a href="privacy.html">Private Policy</a></li>
             </ul>
         </div>
         </section>
 
     </footer>
+    <script>
+        function myFuction() {
+            alert("Form Submitted")
+        }
+    </script>
     
 </body>
 </html>
