--- a/privacy.html
+++ b/privacy.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <main>
-
+       
+        <div class="headings">
     <h1>Private Policy</h1>
     <h2>
         What is a Data Protection Impact Assessment?
     </h2>
+    </div>
     <p>
         When your organisation collects, stores, or uses personal data, the individuals 
         whose data you are processing are exposed to risks. These risks range from 
@@ -24,6 +26,14 @@
         possible. DPIAs are important tools for negating risk, and for demonstrating 
         compliance with the GDPR.
     </p>
+     <ol>
+            <li>We collect personal data only for specified, explicit, and legitimate purposes.</li>
+            <li>Your data is processed securely and confidentially.</li>
+            <li>We do not share your personal information with third parties without your consent.</li>
+            <li>You have the right to access, correct, or delete your personal data.</li>
+            <li>We retain your data only as long as necessary for our services.</li>
+        </ol>
+        <a href="index.html">Go Back to home page <<<</a>
     </main>
 
     
